--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Styles/AppStyles.xaml
@@ -14,4 +14,15 @@
     <Style Selector="TabItem">
         <Setter Property="FontSize" Value="15"/>
     </Style>
+
+    <Style Selector="TextBlock.register_label">
+        <Setter Property="FontFamily" Value="Fira Code" />
+        <Setter Property="Foreground" Value="Gray" />
+        <Setter Property="FontSize" Value="10" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+    </Style>
+    <Style Selector="TextBlock.register_value">
+        <Setter Property="FontFamily" Value="Fira Code" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+    </Style>
 </Styles>
