Adds initial code for handling breakpoints

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/MainWindow.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/MainWindow.axaml
@@ -188,6 +188,9 @@
       <TabItem Header="Registers">
         <v:Registers DataContext="{Binding RegistersViewModel}" />
       </TabItem>
+      <TabItem Header="Breakpoints">
+        <v:Breakpoints DataContext="{Binding BreakpointsViewModel}" />
+      </TabItem>
     </TabControl>
     <ContentControl>
       <ContentControl.Content>
