--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
@@ -4,6 +4,9 @@
              x:Class="Modern.Vice.PdbMonitor.App">
   <Application.Styles>
     <FluentTheme Mode="Light"/>
+    <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+    <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Default.xaml"/>
     <StyleInclude Source="/Styles/AppStyles.xaml"/>
   </Application.Styles>
   <Application.DataTemplates>
