--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
@@ -30,6 +30,7 @@
               Command="{Binding #lines.DataContext.AddOrRemoveBreakpointCommand}" CommandParameter="{Binding}"
               >
               <Button.Styles>
+                <!-- has no breakpoint -->
                 <Style Selector="Button /template/ Border">
                   <Setter Property="Background" Value="Transparent" />
                 </Style>
