--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/App.axaml
@@ -2,6 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:b="clr-namespace:Modern.Vice.PdbMonitor.Behaviors"
              x:Class="Modern.Vice.PdbMonitor.App">
+  <Application.Resources>
+    <!-- default font family for code -->
+    <FontFamily x:Key="CodeFont">resm:Modern.Vice.PdbMonitor.Assets.Fonts.?assembly=Modern.Vice.PdbMonitor#Fira Code</FontFamily>
+  </Application.Resources>
   <Application.Styles>
     <FluentTheme Mode="Light"/>
     <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
