Adds breakpoints bound to label

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/ProjectExplorer.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/ProjectExplorer.axaml
@@ -20,6 +20,11 @@
       </TreeDataTemplate >
       <TreeDataTemplate  DataType="m:AcmeLabel">
         <StackPanel Orientation="Horizontal">
+          <StackPanel.ContextMenu>
+            <ContextMenu>
+              <MenuItem Header="Add breakpoint" Command="{Binding #Tree.DataContext.AddBreakpointOnLabelCommand}" CommandParameter="{Binding #Tree.SelectedItem}" />
+            </ContextMenu >
+          </StackPanel.ContextMenu>
           <TextBlock Text="{Binding Address, StringFormat={}${0:x4}}" Foreground="Gray" FontFamily="{StaticResource CodeFont}" />
           <TextBlock Text="{Binding Name}" Margin="2,0,0,0" />
         </StackPanel>
