--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/BreakpointDetail.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/BreakpointDetail.axaml
@@ -2,10 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="350"
+             xmlns:ae="clr-namespace:AvaloniaEdit;assembly=AvaloniaEdit"
              xmlns:v="clr-namespace:Modern.Vice.PdbMonitor.Views"
              xmlns:c="clr-namespace:Modern.Vice.PdbMonitor.Converters"
+             xmlns:ctl="clr-namespace:Modern.Vice.PdbMonitor.Controls"
              xmlns:vm="clr-namespace:Modern.Vice.PdbMonitor.Engine.ViewModels;assembly=Modern.Vice.PdbMonitor.Engine"
+             xmlns:b="clr-namespace:Modern.Vice.PdbMonitor.Behaviors"
+             xmlns:i="using:Avalonia.Xaml.Interactivity"
+             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="350" MinWidth="500"
              x:DataType="vm:BreakpointDetailViewModel"
              x:Class="Modern.Vice.PdbMonitor.Views.BreakpointDetail">
   <Grid Margin="8">
@@ -33,8 +37,8 @@
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
-      <RowDefinition Height="Auto" />
       <RowDefinition Height="*" />
+      <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
     <CheckBox Grid.Column="1" IsChecked="{Binding Breakpoint.IsEnabled, Mode=TwoWay}">Is enabled</CheckBox>
 
@@ -70,7 +74,13 @@
     </StackPanel>
 
     <Label Grid.Column="0" Grid.Row="6">Condition</Label>
-    <TextBox Grid.Column="1" Grid.Row="6" Text="{Binding Breakpoint.Condition}" HorizontalAlignment="Stretch" />
+    <ae:TextEditor x:Name="Conditions" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Stretch"
+      Foreground="Gray" FontFamily="{StaticResource CodeFont}" MinHeight="60" ShowLineNumbers="true" Margin="0,5"
+      FontSize="14">
+      <i:Interaction.Behaviors>
+        <b:DocumentTextBindingBehavior Text="{Binding Code, Mode=TwoWay}"/>
+      </i:Interaction.Behaviors>
+    </ae:TextEditor>
 
     <StackPanel  Grid.Column="1" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Right"
       VerticalAlignment="Bottom" Margin="0,0,8,0">
